[package]
name = "fastxdr"
version = "1.0.2"
authors = ["Dom Dwyer <dom@itsallbroken.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

license = "BSD-3-Clause"
description = "Generate Rust types from XDR specs with fast, zero-copy deserialisation"
readme = "README.md"
documentation = "https://docs.rs/fastxdr"
repository = "https://github.com/domodwyer/fastxdr"
keywords = ["xdr", "codec", "encode", "onc", "rpc"]
categories = ["network-programming", "encoding", "parser-implementations", "parsing", "development-tools::build-utils"]

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
thiserror = "2.0.12"
bytes = "1.10.0"